# envy

./: .gitignore  .travis.yml  LICENSE  README.md  Test.hs  circle.yml  default.nix  envy.cabal  envy.nix  shell.nix  upload.nix
.github/workflows/: main.yml
examples/: Test.hs
src/System/: Env.hs  Envy.hs
tests/: Main.hs
