name:                envy
version:             0.1.0.0
synopsis:            An environmentally friendly way to deal with environment variables
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2015
category:            System
build-type:          Simple
cabal-version:       >=1.10
description:
        For package use information see: https://github.com/dmjio/envy/blob/master/README.md
library
  exposed-modules:      System.Envy
  ghc-options:          -Wall
  hs-source-dirs:       src
  build-depends:        base         >= 4.7 && < 5
                      , bytestring   == 0.10.*
                      , containers   == 0.5.*
                      , mtl          == 2.2.*
                      , text         == 1.2.*
                      , time         == 1.5.*
                      , transformers == 0.4.*
  default-language:     Haskell2010

test-suite spec
    type:               exitcode-stdio-1.0
    ghc-options:        -Wall
    hs-source-dirs:     tests
    main-is:            Main.hs
    build-depends:      base                 >= 4.7 && < 5
                      , bytestring           == 0.10.*
                      , envy                 == 0.1.*
                      , hspec                == 2.1.*
                      , mtl                  == 2.2.*
                      , quickcheck-instances == 0.3.*
                      , QuickCheck           == 2.8.*
                      , text                 == 1.2.*
                      , time                 == 1.5.*
                      , transformers         == 0.4.*
    default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmjio/envy
