name:                envy
version:             2.1.1.0
synopsis:            An environmentally friendly way to deal with environment variables
license:             BSD3
license-file:        LICENSE
author:              David Johnson, Tim Adams, Eric Mertens, Nicolas Rolland
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2015-2020
category:            System
build-type:          Simple
cabal-version:       >=1.10
description:
  For package use information see the <https://github.com/dmjio/envy/blob/master/README.md README.md>

extra-source-files:
    README.md
    examples/Test.hs

library
  exposed-modules:      System.Envy
  ghc-options:          -Wall
  hs-source-dirs:       src
  build-depends:        base         >= 4.11 && < 5
                      , bytestring   == 0.10.* || == 0.11.*
                      , containers   >= 0.5 && < 0.7
                      , mtl          == 2.2.*
                      , text         == 1.2.* || == 2.0.*
                      , time         >= 1.5 && < 2.0
                      , transformers >= 0.4 && < 0.6
  default-language:     Haskell2010

test-suite spec
    type:               exitcode-stdio-1.0
    ghc-options:        -Wall
    hs-source-dirs:     tests
    main-is:            Main.hs
    build-depends:      base
                      , bytestring
                      , envy
                      , hspec
                      , mtl
                      , quickcheck-instances
                      , QuickCheck
                      , text
                      , time
                      , transformers
    default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmjio/envy
